Write lobster bisque ingredients list, add photos
Photos were not added in previous commit, they are now in the photos
folder. Lobster bisque ingredients list written.

--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -7,5 +7,32 @@
     </head>
     <body>
         <h1>Lobster Bisque</h1>
+        <img src="../images/lobster-bisque.jpg" width="400" height="300">
+        <p><strong>Ingredients:</strong></p>
+        <ul>
+            <li>1/2 lb lobster meat, cut up in small pieces</li>
+            <li>1/4 cup white wine</li>
+            <li>2 tbsp minced shallots</li>
+            <li>2 tbsp chopped green onions</li>
+            <li>3 crushed garlic cloves</li>
+            <li>2 tsp Worcestershire sauce</li>
+            <li>2 tsp Tabasco sauce</li>
+            <li>1 tsp dried thyme</li>
+            <li>6 tbsp dry sherry</li>
+            <li>1 tsp paprika</li>
+            <li>1 cup hot water</li>
+            <li>tsp lobster base(or bullion, base is better)</li>
+            <li>4 oz tomato paste</li>
+            <li>2 bay leaves</li>
+            <li>2 cups heavy whipping cream</li>
+            <li>4 tbsp butter</li>
+        </ul>
+        <ol>
+            <li>Heat some oil on medium high heat and saute shallots, onions, and garlic for one minute.</li>
+            <li>Deglaze the pan with white wine.</li>
+            <li>Add the worcestershire, tabasco and thyme and saute for another minute.</li>
+            <li>Deglaze the pan with the sherry.</li>
+            <li></li>
+        </ol>
     </body>
 </html>
