Finish lobster bisque cooking instructions

--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -27,12 +27,18 @@
             <li>2 cups heavy whipping cream</li>
             <li>4 tbsp butter</li>
         </ul>
+        <p><strong>Instructions:</strong></p>
         <ol>
             <li>Heat some oil on medium high heat and saute shallots, onions, and garlic for one minute.</li>
             <li>Deglaze the pan with white wine.</li>
             <li>Add the worcestershire, tabasco and thyme and saute for another minute.</li>
             <li>Deglaze the pan with the sherry.</li>
-            <li></li>
+            <li>Add the paprika, hot water and lobster base and mix well.</li>
+            <li>Stir in tomato paste and add both bay leaves.</li>
+            <li>Simmer for 10 minutes.</li>
+            <li>Whisk in heavy cream, add the butter and bring to a boil.</li>
+            <li>Add the lobster meat and simmer until opaque/cooked through.</li>
+            <li>Serve with garlic bread.</li>
         </ol>
     </body>
 </html>
