Update lobster bisque page add photo croque madame
Lobster bisque cooking instructions updated. Croque madame photo added
to croque madame page.

--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -38,7 +38,7 @@
             <li>Simmer for 10 minutes.</li>
             <li>Whisk in heavy cream, add the butter and bring to a boil.</li>
             <li>Add the lobster meat and simmer until opaque/cooked through.</li>
-            <li>Serve with garlic bread.</li>
+            <li>Serve with garlic bread on the side, if available.</li>
         </ol>
     </body>
 </html>
