--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>Croque Madame</h1>
+        <img src="../images/croque-madame.jpg" width="400" height="300">
     </body>
 </html>
