Create ingredients list croque madame

--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -8,5 +8,21 @@
     <body>
         <h1>Croque Madame</h1>
         <img src="../images/croque-madame.jpg" width="400" height="300">
+        <p><strong>Ingredients:</strong></p>
+        <ul>
+            <li>4 half inch thick firm white sandwich bread slices</li>
+            <li>3 tbsp unsalted butter, softened and divided</li>
+            <li>1 tbsp all-purpose flour</li>
+            <li>3/4 cup whole milk</li>
+            <li>4 oz Gruyere cheese, grated on small holse of box grater (about 1 cup), divided</li>
+            <li>1/2 tsp kosher salt</li>
+            <li>1/4 tsp black pepper, plus extra for garnish</li>
+            <li>1/4 tsp ground nutmeg</li>
+            <li>4 slices cooked unsmoked ham (3 oz total)</li>
+            <li>1 tbsp Dijon mustard</li>
+            <li>2 large eggs</li>
+            <li>Chopped fresh chives</li>
+            <li>Flaky sea salt</li>
+        </ul>
     </body>
 </html>
