--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -24,5 +24,14 @@
             <li>Chopped fresh chives</li>
             <li>Flaky sea salt</li>
         </ul>
+        <p><strong>Instructions:</strong></p>
+        <ol>
+            <li>Preheat oven to broil with rack about 8 inches from heat source. Heat a large nonstick skillet over medium-high. Spread 1 side of bread slices evenly with 1 tablespoon of the butter. Place bread slices, buttered side down, in skillet; cook until toasted and golden, 2 to 4 minutes. Transfer bread to a work surface. Wipe skillet clean.</li>
+            <li>Melt 1 tablespoon of the butter in a small saucepan over medium until foamy. Whisk in flour; cook, whisking constantly, until light golden, about 1 minute, 30 seconds. Gradually whisk in milk; bring to a simmer over medium, whisking constantly. Reduce heat to low; cook, whisking often, until thickened, about 3 minutes. Remove from heat. Add 1/4 cup of the grated Gruyère and whisk until melted. Stir salt, pepper, and nutmeg into the Mornay sauce. (If not using immediately, cover surface of sauce directly with plastic wrap for up to 1 hour.)</li>
+            <li>Arrange 2 of the bread slices on a work surface, toasted side down. On each slice, spread 2 tablespoons Mornay sauce to evenly to cover the surface. Sprinkle with 1/4 cup grated Gruyère, and top with 2 ham slices. Spread mustard evenly on untoasted sides of remaining 2 bread slices; place, mustard side down, on top of ham-topped slices. Spread remaining Mornay sauce evenly on top of sandwiches, then top with remaining 1/4 cup grated Gruyère.</li>
+            <li>Transfer sandwiches to a rimmed baking sheet, and broil in preheated oven until cheese has melted and top is bubbly and browning in spots, 5 to 7 minutes.</li>
+            <li>Meanwhile, melt remaining 1 tablespoon butter in cleaned nonstick skillet over medium-high. Crack eggs into skillet; cook, undisturbed, until whites are set but yolks are runny, about 3 minutes.</li>
+            <li>Top each sandwich with a fried egg; garnish with chives, flaky sea salt, and additional pepper.</li>
+        </ol>
     </body>
 </html>
