Add three recipe descriptions

--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Lobster Bisque</h1>
         <img src="../images/lobster-bisque.jpg" width="400" height="300">
+        <p>Lobster bisque is a creamy french style bisque soup made with lobster meat. This recipe takes about 40 minutes. It incorporates 16 ingredients and serves 2 to 3 people.</p>
         <p><strong>Ingredients:</strong></p>
         <ul>
             <li>1/2 lb lobster meat, cut up in small pieces</li>
