--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -7,5 +7,11 @@
     </head>
     <body>
         <h1>Stuffed Chicken Breast</h1>
+        <img src="../images/stuffed-chicken-breast.jpg" width="300" height="400">
+        <p>Stuffed chicken breast is a great way to enhance normal baked chicken breast. This recipe can be modified to include many of your favorite stuffing ingredients to make a rich, tasty meal. This recipe serves 4 people and is done in 20-30 minutes.</p>
+        <p><strong>Ingredients:</strong></p>
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
