--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Croque Madame</h1>
         <img src="../images/croque-madame.jpg" width="400" height="300">
+        <p>Croque madame is a fantastic meal, great for breakfast, lunch and dinner! This french spin on a ham sandwich is considered luxurious and tastes great. This recipe serves 1-2 people and takes about 30 minutes to cook. Enjoy!</p>
         <p><strong>Ingredients:</strong></p>
         <ul>
             <li>4 half inch thick firm white sandwich bread slices</li>
