Add ingredients list chicken breast page

--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -7,11 +7,21 @@
     </head>
     <body>
         <h1>Stuffed Chicken Breast</h1>
-        <img src="../images/stuffed-chicken-breast.jpg" width="300" height="400">
+        <img src="../images/stuffed-chicken-breast.jpg" width="400" height="300">
         <p>Stuffed chicken breast is a great way to enhance normal baked chicken breast. This recipe can be modified to include many of your favorite stuffing ingredients to make a rich, tasty meal. This recipe serves 4 people and is done in 20-30 minutes.</p>
         <p><strong>Ingredients:</strong></p>
-        <ol>
-            <li></li>
-        </ol>
+        <ul>
+            <li>4 Chicken Breasts</li>
+            <li>Olive Oil</li>
+            <li>Shallots</li>
+            <li>Garlic</li>
+            <li>Spinach</li>
+            <li>Salt and Pepper</li>
+            <li>Oregano</li>
+            <li>Thyme</li>
+            <li>Red Pepper Flakes</li>
+            <li>Cream Cheese</li>
+            <li>Parmesan Cheese</li>
+        </ul>
     </body>
 </html>
