Change instructions heading to steps

--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -25,7 +25,7 @@
             <li>Chopped fresh chives</li>
             <li>Flaky sea salt</li>
         </ul>
-        <p><strong>Instructions:</strong></p>
+        <p><strong>Steps:</strong></p>
         <ol>
             <li>Preheat oven to broil with rack about 8 inches from heat source. Heat a large nonstick skillet over medium-high. Spread 1 side of bread slices evenly with 1 tablespoon of the butter. Place bread slices, buttered side down, in skillet; cook until toasted and golden, 2 to 4 minutes. Transfer bread to a work surface. Wipe skillet clean.</li>
             <li>Melt 1 tablespoon of the butter in a small saucepan over medium until foamy. Whisk in flour; cook, whisking constantly, until light golden, about 1 minute, 30 seconds. Gradually whisk in milk; bring to a simmer over medium, whisking constantly. Reduce heat to low; cook, whisking often, until thickened, about 3 minutes. Remove from heat. Add 1/4 cup of the grated Gruyère and whisk until melted. Stir salt, pepper, and nutmeg into the Mornay sauce. (If not using immediately, cover surface of sauce directly with plastic wrap for up to 1 hour.)</li>
