--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -28,7 +28,7 @@
             <li>2 cups heavy whipping cream</li>
             <li>4 tbsp butter</li>
         </ul>
-        <p><strong>Instructions:</strong></p>
+        <p><strong>Steps:</strong></p>
         <ol>
             <li>Heat some oil on medium high heat and saute shallots, onions, and garlic for one minute.</li>
             <li>Deglaze the pan with white wine.</li>
