--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -23,7 +23,7 @@
             <li>Cream Cheese</li>
             <li>Parmesan Cheese</li>
         </ul>
-        <p><strong>Instructions:</strong></p>
+        <p><strong>Steps:</strong></p>
         <ol>
             <li><strong>Prep:</strong> Preheat your oven to 375 degrees fahrenheit and prepare your chicken by drying each one off and cutting a pocket into each one. Set aside.</li>
             <li><strong>Cook Spinach:</strong> In a medium skillet over medium high heat, heat 1 tablespoon of oil and saute your shallots for about 3 minutes. Add in your garlic and chopped spinach. Then cook until your spinach has wilted. Then remove from heat.</li>
