--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients." width="400" height="300">
+        <div>
+            <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients." width="410" height="300" class="img1">
+        </div>
         <ul>
-            <li><a href="recipes/lobster-bisque.html">Lobster Bisque</a></li>
-            <li><a href="recipes/stuffed-chicken-breast.html">Stuffed Chicken Breast</a></li>
-            <li><a href="recipes/croque-madame.html">Croque Madame</a></li>
+            <li class="listitem"><a href="./recipes/lobster-bisque.html">Lobster Bisque</a></li>
+            <li class="listitem"><a href="./recipes/stuffed-chicken-breast.html">Stuffed Chicken Breast</a></li>
+            <li class="listitem"><a href="./recipes/croque-madame.html">Croque Madame</a></li>
         </ul>
     </body>
 </html>
