Create new background design for all pages
Alterations mainly to the CSS documents and also minor additions to the
HTML documents for all site pages were added. These alterations create
a new background design and add a new class named "background".

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="with=device-width, initial-scale=1.0">
-        <title>Odin Recipes</title>
-        <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <div>
-            <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients." width="410" height="300" class="img1">
+        <div class="background">
+            <meta charset="utf-8">
+            <meta name="viewport" content="with=device-width, initial-scale=1.0">
+            <title>Odin Recipes</title>
+            <link rel="stylesheet" href="./style.css">
+        </head>
+        <body>
+            <h1>Odin Recipes</h1>
+            <div>
+                <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients." width="410" height="300" class="img1">
+            </div>
+            <ul>
+                <li class="listitem"><a href="./recipes/croque-madame.html">Croque Madame</a></li>
+                <li class="listitem"><a href="./recipes/lobster-bisque.html">Lobster Bisque</a></li>
+                <li class="listitem"><a href="./recipes/stuffed-chicken-breast.html">Stuffed Chicken Breast</a></li>
+            </ul>
         </div>
-        <ul>
-            <li class="listitem"><a href="./recipes/croque-madame.html">Croque Madame</a></li>
-            <li class="listitem"><a href="./recipes/lobster-bisque.html">Lobster Bisque</a></li>
-            <li class="listitem"><a href="./recipes/stuffed-chicken-breast.html">Stuffed Chicken Breast</a></li>
-        </ul>
     </body>
 </html>
