--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -7,43 +7,45 @@
         <link rel="stylesheet" href="./lobster-bisque.css">
     </head>
     <body>
-        <h1>Lobster Bisque</h1>
-        <div>
-            <img src="../images/lobster-bisque.jpg" width="400" height="300">
+        <div class="background">
+            <h1>Lobster Bisque</h1>
+            <div>
+                <img src="../images/lobster-bisque.jpg" width="400" height="300">
+            </div>
+            <p>Lobster bisque is a creamy french style bisque soup made with lobster meat. This recipe takes about 40 minutes. It incorporates 16 ingredients and serves 2 to 3 people.</p>
+            <p class="lititle"><strong>Ingredients:</strong></p>
+            <ul class="ullist lists">
+                <li>1/2 lb lobster meat, cut up in small pieces</li>
+                <li>1/4 cup white wine</li>
+                <li>2 tbsp minced shallots</li>
+                <li>2 tbsp chopped green onions</li>
+                <li>3 crushed garlic cloves</li>
+                <li>2 tsp Worcestershire sauce</li>
+                <li>2 tsp Tabasco sauce</li>
+                <li>1 tsp dried thyme</li>
+                <li>6 tbsp dry sherry</li>
+                <li>1 tsp paprika</li>
+                <li>1 cup hot water</li>
+                <li>tsp lobster base(or bullion, base is better)</li>
+                <li>4 oz tomato paste</li>
+                <li>2 bay leaves</li>
+                <li>2 cups heavy whipping cream</li>
+                <li>4 tbsp butter</li>
+            </ul>
+            <p class="lititle"><strong>Steps:</strong></p>
+            <ol class="numlist lists">
+                <li>Heat some oil on medium high heat and saute shallots, onions, and garlic for one minute.</li>
+                <li>Deglaze the pan with white wine.</li>
+                <li>Add the worcestershire, tabasco and thyme and saute for another minute.</li>
+                <li>Deglaze the pan with the sherry.</li>
+                <li>Add the paprika, hot water and lobster base and mix well.</li>
+                <li>Stir in tomato paste and add both bay leaves.</li>
+                <li>Simmer for 10 minutes.</li>
+                <li>Whisk in heavy cream, add the butter and bring to a boil.</li>
+                <li>Add the lobster meat and simmer until opaque/cooked through.</li>
+                <li>Serve with garlic bread on the side, if available.</li>
+            </ol>
+            <a class="backbtn" href="../index.html">Homepage</a>
         </div>
-        <p>Lobster bisque is a creamy french style bisque soup made with lobster meat. This recipe takes about 40 minutes. It incorporates 16 ingredients and serves 2 to 3 people.</p>
-        <p class="lititle"><strong>Ingredients:</strong></p>
-        <ul class="ullist lists">
-            <li>1/2 lb lobster meat, cut up in small pieces</li>
-            <li>1/4 cup white wine</li>
-            <li>2 tbsp minced shallots</li>
-            <li>2 tbsp chopped green onions</li>
-            <li>3 crushed garlic cloves</li>
-            <li>2 tsp Worcestershire sauce</li>
-            <li>2 tsp Tabasco sauce</li>
-            <li>1 tsp dried thyme</li>
-            <li>6 tbsp dry sherry</li>
-            <li>1 tsp paprika</li>
-            <li>1 cup hot water</li>
-            <li>tsp lobster base(or bullion, base is better)</li>
-            <li>4 oz tomato paste</li>
-            <li>2 bay leaves</li>
-            <li>2 cups heavy whipping cream</li>
-            <li>4 tbsp butter</li>
-        </ul>
-        <p class="lititle"><strong>Steps:</strong></p>
-        <ol class="numlist lists">
-            <li>Heat some oil on medium high heat and saute shallots, onions, and garlic for one minute.</li>
-            <li>Deglaze the pan with white wine.</li>
-            <li>Add the worcestershire, tabasco and thyme and saute for another minute.</li>
-            <li>Deglaze the pan with the sherry.</li>
-            <li>Add the paprika, hot water and lobster base and mix well.</li>
-            <li>Stir in tomato paste and add both bay leaves.</li>
-            <li>Simmer for 10 minutes.</li>
-            <li>Whisk in heavy cream, add the butter and bring to a boil.</li>
-            <li>Add the lobster meat and simmer until opaque/cooked through.</li>
-            <li>Serve with garlic bread on the side, if available.</li>
-        </ol>
-        <a class="backbtn" href="../index.html">Homepage</a>
     </body>
 </html>
