--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -7,34 +7,36 @@
         <link rel="stylesheet" href="./stuffed-chicken-breast.css">
     </head>
     <body>
-        <h1>Stuffed Chicken Breast</h1>
-        <div>
-            <img src="../images/stuffed-chicken-breast.jpg" width="400" height="300">
+        <div class="background">
+            <h1>Stuffed Chicken Breast</h1>
+            <div>
+                <img src="../images/stuffed-chicken-breast.jpg" width="400" height="300">
+            </div>
+            <p>Stuffed chicken breast is a great way to enhance normal baked chicken breast. This recipe can be modified to include many of your favorite stuffing ingredients to make a rich, tasty meal. This recipe serves 4 people and is done in 20-30 minutes.</p>
+            <p class="lititle"><strong>Ingredients:</strong></p>
+            <ul class="ullist lists">
+                <li>4 Chicken Breasts</li>
+                <li>Olive Oil</li>
+                <li>Shallots</li>
+                <li>Garlic</li>
+                <li>Spinach</li>
+                <li>Salt and Pepper</li>
+                <li>Oregano</li>
+                <li>Thyme</li>
+                <li>Red Pepper Flakes</li>
+                <li>Cream Cheese</li>
+                <li>Parmesan Cheese</li>
+            </ul>
+            <p class="lititle"><strong>Steps:</strong></p>
+            <ol class="numlist lists">
+                <li><strong>Prep:</strong> Preheat your oven to 375 degrees fahrenheit and prepare your chicken by drying each one off and cutting a pocket into each one. Set aside.</li>
+                <li><strong>Cook Spinach:</strong> In a medium skillet over medium high heat, heat 1 tablespoon of oil and saute your shallots for about 3 minutes. Add in your garlic and chopped spinach. Then cook until your spinach has wilted. Then remove from heat.</li>
+                <li><strong>Make Seasoning:</strong> In a small bowl, mix your salt, pepper, oregano, thyme, and red pepper flakes. Then divide this mixture in half.</li>
+                <li><strong>Make Filling:</strong> In a medium bowl add your softened cream cheese, parmesan cheese, cooked spinach and shallots and half of your spice mix. Mix well to combine.</li>
+                <li><strong>Season and Stuff Chicken:</strong> Rub the remaining 2 tablespoons of oil onto each chicken breast and then season each one with the remaining spice mix. Stuff each chicken evenly with the spinach and cream cheese mixture until it has all been used.</li>
+                <li><strong>Bake:</strong> Place the stuffed breasts onto a 9x13 inch baking dish. Bake uncovered for 30-45 minutes, or until the chicken is cooked through and there is a nice brown crust on the top of each one.</li>
+            </ol>
+            <a class="backbtn" href="../index.html">Homepage</a>
         </div>
-        <p>Stuffed chicken breast is a great way to enhance normal baked chicken breast. This recipe can be modified to include many of your favorite stuffing ingredients to make a rich, tasty meal. This recipe serves 4 people and is done in 20-30 minutes.</p>
-        <p class="lititle"><strong>Ingredients:</strong></p>
-        <ul class="ullist lists">
-            <li>4 Chicken Breasts</li>
-            <li>Olive Oil</li>
-            <li>Shallots</li>
-            <li>Garlic</li>
-            <li>Spinach</li>
-            <li>Salt and Pepper</li>
-            <li>Oregano</li>
-            <li>Thyme</li>
-            <li>Red Pepper Flakes</li>
-            <li>Cream Cheese</li>
-            <li>Parmesan Cheese</li>
-        </ul>
-        <p class="lititle"><strong>Steps:</strong></p>
-        <ol class="numlist lists">
-            <li><strong>Prep:</strong> Preheat your oven to 375 degrees fahrenheit and prepare your chicken by drying each one off and cutting a pocket into each one. Set aside.</li>
-            <li><strong>Cook Spinach:</strong> In a medium skillet over medium high heat, heat 1 tablespoon of oil and saute your shallots for about 3 minutes. Add in your garlic and chopped spinach. Then cook until your spinach has wilted. Then remove from heat.</li>
-            <li><strong>Make Seasoning:</strong> In a small bowl, mix your salt, pepper, oregano, thyme, and red pepper flakes. Then divide this mixture in half.</li>
-            <li><strong>Make Filling:</strong> In a medium bowl add your softened cream cheese, parmesan cheese, cooked spinach and shallots and half of your spice mix. Mix well to combine.</li>
-            <li><strong>Season and Stuff Chicken:</strong> Rub the remaining 2 tablespoons of oil onto each chicken breast and then season each one with the remaining spice mix. Stuff each chicken evenly with the spinach and cream cheese mixture until it has all been used.</li>
-            <li><strong>Bake:</strong> Place the stuffed breasts onto a 9x13 inch baking dish. Bake uncovered for 30-45 minutes, or until the chicken is cooked through and there is a nice brown crust on the top of each one.</li>
-        </ol>
-        <a class="backbtn" href="../index.html">Homepage</a>
     </body>
 </html>
