--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Croque Madame</title>
-        <link rel="stylesheet" href="croque-madame.css">
-    </head>
-    <body>
-        <h1>Croque Madame</h1>
-        <div>
-            <img src="../images/croque-madame.jpg" width="400" height="300">
+        <div class="background">
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Croque Madame</title>
+            <link rel="stylesheet" href="croque-madame.css">
+        </head>
+        <body>
+            <h1>Croque Madame</h1>
+            <div class="photo">
+                <img src="../images/croque-madame.jpg" width="400" height="300">
+            </div>
+            <p>Croque madame is a fantastic meal, great for breakfast, lunch and dinner! This french spin on a ham sandwich is considered luxurious and tastes great. This recipe serves 1-2 people and takes about 30 minutes to cook. Enjoy!</p>
+            <p class="lititle"><strong>Ingredients:</strong></p>
+            <ul class="ullist lists">
+                <li>4 half inch thick firm white sandwich bread slices</li>
+                <li>3 tbsp unsalted butter, softened and divided</li>
+                <li>1 tbsp all-purpose flour</li>
+                <li>3/4 cup whole milk</li>
+                <li>4 oz Gruyere cheese, grated on small holse of box grater (about 1 cup), divided</li>
+                <li>1/2 tsp kosher salt</li>
+                <li>1/4 tsp black pepper, plus extra for garnish</li>
+                <li>1/4 tsp ground nutmeg</li>
+                <li>4 slices cooked unsmoked ham (3 oz total)</li>
+                <li>1 tbsp Dijon mustard</li>
+                <li>2 large eggs</li>
+                <li>Chopped fresh chives</li>
+                <li>Flaky sea salt</li>
+            </ul>
+            <p class="lititle"><strong>Steps:</strong></p>
+            <ol class="numlist">
+                <li>Preheat oven to broil with rack about 8 inches from heat source. Heat a large nonstick skillet over medium-high. Spread 1 side of bread slices evenly with 1 tablespoon of the butter. Place bread slices, buttered side down, in skillet; cook until toasted and golden, 2 to 4 minutes. Transfer bread to a work surface. Wipe skillet clean.</li>
+                <li>Melt 1 tablespoon of the butter in a small saucepan over medium until foamy. Whisk in flour; cook, whisking constantly, until light golden, about 1 minute, 30 seconds. Gradually whisk in milk; bring to a simmer over medium, whisking constantly. Reduce heat to low; cook, whisking often, until thickened, about 3 minutes. Remove from heat. Add 1/4 cup of the grated Gruyère and whisk until melted. Stir salt, pepper, and nutmeg into the Mornay sauce. (If not using immediately, cover surface of sauce directly with plastic wrap for up to 1 hour.)</li>
+                <li>Arrange 2 of the bread slices on a work surface, toasted side down. On each slice, spread 2 tablespoons Mornay sauce to evenly to cover the surface. Sprinkle with 1/4 cup grated Gruyère, and top with 2 ham slices. Spread mustard evenly on untoasted sides of remaining 2 bread slices; place, mustard side down, on top of ham-topped slices. Spread remaining Mornay sauce evenly on top of sandwiches, then top with remaining 1/4 cup grated Gruyère.</li>
+                <li>Transfer sandwiches to a rimmed baking sheet, and broil in preheated oven until cheese has melted and top is bubbly and browning in spots, 5 to 7 minutes.</li>
+                <li>Meanwhile, melt remaining 1 tablespoon butter in cleaned nonstick skillet over medium-high. Crack eggs into skillet; cook, undisturbed, until whites are set but yolks are runny, about 3 minutes.</li>
+                <li>Top each sandwich with a fried egg; garnish with chives, flaky sea salt, and additional pepper.</li>
+            </ol>
+            <a class="backbtn" href="../index.html">Homepage</a>
         </div>
-        <p>Croque madame is a fantastic meal, great for breakfast, lunch and dinner! This french spin on a ham sandwich is considered luxurious and tastes great. This recipe serves 1-2 people and takes about 30 minutes to cook. Enjoy!</p>
-        <p class="lititle"><strong>Ingredients:</strong></p>
-        <ul class="ullist lists">
-            <li>4 half inch thick firm white sandwich bread slices</li>
-            <li>3 tbsp unsalted butter, softened and divided</li>
-            <li>1 tbsp all-purpose flour</li>
-            <li>3/4 cup whole milk</li>
-            <li>4 oz Gruyere cheese, grated on small holse of box grater (about 1 cup), divided</li>
-            <li>1/2 tsp kosher salt</li>
-            <li>1/4 tsp black pepper, plus extra for garnish</li>
-            <li>1/4 tsp ground nutmeg</li>
-            <li>4 slices cooked unsmoked ham (3 oz total)</li>
-            <li>1 tbsp Dijon mustard</li>
-            <li>2 large eggs</li>
-            <li>Chopped fresh chives</li>
-            <li>Flaky sea salt</li>
-        </ul>
-        <p class="lititle"><strong>Steps:</strong></p>
-        <ol class="numlist">
-            <li>Preheat oven to broil with rack about 8 inches from heat source. Heat a large nonstick skillet over medium-high. Spread 1 side of bread slices evenly with 1 tablespoon of the butter. Place bread slices, buttered side down, in skillet; cook until toasted and golden, 2 to 4 minutes. Transfer bread to a work surface. Wipe skillet clean.</li>
-            <li>Melt 1 tablespoon of the butter in a small saucepan over medium until foamy. Whisk in flour; cook, whisking constantly, until light golden, about 1 minute, 30 seconds. Gradually whisk in milk; bring to a simmer over medium, whisking constantly. Reduce heat to low; cook, whisking often, until thickened, about 3 minutes. Remove from heat. Add 1/4 cup of the grated Gruyère and whisk until melted. Stir salt, pepper, and nutmeg into the Mornay sauce. (If not using immediately, cover surface of sauce directly with plastic wrap for up to 1 hour.)</li>
-            <li>Arrange 2 of the bread slices on a work surface, toasted side down. On each slice, spread 2 tablespoons Mornay sauce to evenly to cover the surface. Sprinkle with 1/4 cup grated Gruyère, and top with 2 ham slices. Spread mustard evenly on untoasted sides of remaining 2 bread slices; place, mustard side down, on top of ham-topped slices. Spread remaining Mornay sauce evenly on top of sandwiches, then top with remaining 1/4 cup grated Gruyère.</li>
-            <li>Transfer sandwiches to a rimmed baking sheet, and broil in preheated oven until cheese has melted and top is bubbly and browning in spots, 5 to 7 minutes.</li>
-            <li>Meanwhile, melt remaining 1 tablespoon butter in cleaned nonstick skillet over medium-high. Crack eggs into skillet; cook, undisturbed, until whites are set but yolks are runny, about 3 minutes.</li>
-            <li>Top each sandwich with a fried egg; garnish with chives, flaky sea salt, and additional pepper.</li>
-        </ol>
-        <a class="backbtn" href="../index.html">Homepage</a>
     </body>
 </html>
