Make all site images scale to screen size add alt
Resized all image files to 400px x 300px, except homepage image. Removed
 height and width image html attributes. Updated css pages to include
same home page image settings. Width and height on auto and max-width
and max-height to 100%, causing image to scale size to the size of the
device screen. Alt attributes added to image tags.

--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -10,7 +10,7 @@
         <body>
             <h1>Croque Madame</h1>
             <div class="photo">
-                <img src="../images/croque-madame.jpg" width="400" height="300">
+                <img src="../images/croque-madame.jpg" alt="A photo displaying a croque madame sandwich.">
             </div>
             <p>Croque madame is a fantastic meal, great for breakfast, lunch and dinner! This french spin on a ham sandwich is considered luxurious and tastes great. This recipe serves 1-2 people and takes about 30 minutes to cook. Enjoy!</p>
             <p class="lititle"><strong>Ingredients:</strong></p>
