--- a/recipes/lobster-bisque.html
+++ b/recipes/lobster-bisque.html
@@ -10,7 +10,7 @@
         <div class="background">
             <h1>Lobster Bisque</h1>
             <div>
-                <img src="../images/lobster-bisque.jpg" width="400" height="300">
+                <img src="../images/lobster-bisque.jpg" alt="A picture displaying a bowl of lobster bisque soup.">
             </div>
             <p>Lobster bisque is a creamy french style bisque soup made with lobster meat. This recipe takes about 40 minutes. It incorporates 16 ingredients and serves 2 to 3 people.</p>
             <p class="lititle"><strong>Ingredients:</strong></p>
