--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -10,7 +10,7 @@
         <div class="background">
             <h1>Stuffed Chicken Breast</h1>
             <div>
-                <img src="../images/stuffed-chicken-breast.jpg" width="400" height="300">
+                <img src="../images/stuffed-chicken-breast.jpg" alt="A photo displaying cheese and spinach stuffed chicken breast.">
             </div>
             <p>Stuffed chicken breast is a great way to enhance normal baked chicken breast. This recipe can be modified to include many of your favorite stuffing ingredients to make a rich, tasty meal. This recipe serves 4 people and is done in 20-30 minutes.</p>
             <p class="lititle"><strong>Ingredients:</strong></p>
