--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <body>
             <h1>Odin Recipes!</h1>
             <div>
-                <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients." class="img1">
+                <img src="images/cuttingboard.jpg" alt="A cutting board and ingredients.">
             </div>
             <ul>
                 <li class="listitem"><a href="./recipes/croque-madame.html">Croque Madame</a></li>
