--- a/recipes/stuffed-chicken-breast.html
+++ b/recipes/stuffed-chicken-breast.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div class="background">
-            <h1>Stuffed Chicken Breast</h1>
+            <div class="heading">
+                <h1>Stuffed Chicken Breast</h1>
+            </div>
             <div>
                 <img src="../images/stuffed-chicken-breast.jpg" alt="A photo displaying cheese and spinach stuffed chicken breast.">
             </div>
